# twitter-app

./: .travis.yaml  CHANGELOG.md  Dockerfile  Dockerfile.dev  Makefile  README.md  Twitter.postman_collection.json  go.mod  go.sum  k8s-twitter-deployment.yaml  main.go  skaffold.yaml
api/: api.go
api/enpoints/: messages.go
deployment/: twitter-deployment.yaml
pkg/config/: config.go  config_test.go
pkg/db/: connector.go  crud.go  mongo.go
pkg/db/mongodb/: crud.go  mongo.go
pkg/messenger/: messenger.go  twitter.go  twitter_test.go
pkg/models/: message.go  message_filter.go  message_filter_test.go
tests/: Dockerfile  pyproject.toml
tests/src/core/: config.py
tests/src/e2e/: basic_api_test.py  conftest.py
