[tool.poetry]
name = "twitter-test"
version = "0.1.0"
description = "Twitter test is Python project aiming to test Twitter application"
authors = ["Maciej Tomczuk"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "6.2.4"
black= "20.8b1"
requests = "^2.25.1"
pymongo = "^3.11.4"
pydantic = "^1.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
